--- a/src/assets/styles/Tuningfork.css
+++ b/src/assets/styles/Tuningfork.css
@@ -1,3 +1,7 @@
+.tuningfork {
+  
+}
+
 .play-sound {
   font-size: 1.5rem;
   color: whitesmoke;
@@ -6,6 +10,7 @@
   border: darkorchid 1px solid;
   border-radius: 25%;
   transition: all .5s linear;
+  margin: .25rem;
 }
 
 .play-sound:hover {
