Added controls to Metronome. Fixed style.

--- a/src/assets/styles/Metronome.css
+++ b/src/assets/styles/Metronome.css
@@ -1,57 +1,38 @@
 input[type="range"] {
   -webkit-appearance: none !important;
-  max-height: 3px;
+  max-height: .1875rem;
   position: relative;
-  top: -3px;
+  top: -0.1875rem;
   background: #DDD;
 }
 
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none !important;
-  width: 15px;
-  height: 15px;
+  width: .9375rem;
+  height: .9375rem;
   position: relative;
-  top: -1px;
+  top: -0.0625rem;
   background: #222;
-}
-
-.counter {
-  width: 100%;
-  padding-bottom: 10px;
-  background: lighten(#333, 5%);
-  text-align: center;
-}
-
-.counter .dot {
-  width: 15px;
-  height: 15px;
-  display: inline-block;
-  margin: 25px 10px 10px 10px;
-  background: #FFF;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.counter .active {
-  background: lighten(#44B8FF, 5%);
 }
 
 .controls {
   color: darkviolet;
-  padding: 20px;
+  padding: 1.25rem;
   text-align: center;
 }
 
 .controls label {
   display: block;
-  margin-bottom: 18px;
+}
+
+.controls label:nth-child(1) {
+  margin-bottom: 1.125rem;
 }
 
 .controls lalel span {
   background: #FFF;
   color: #222;
-  padding: 5px;
+  padding: .3125rem;
 }
 
 .controls label span p {
@@ -64,17 +45,20 @@ input[type="range"]::-webkit-slider-thumb {
   color: #FA6900;
 }
 
-
-
 input {
-  width: 30px;
-  border: 0px solid;
+  width: 1.875rem;
+  border: 0rem solid;
   color: #222;
   text-align: center;
-  padding: 4px;
+  padding: .25rem;
 }
 
 select {
-  border: 0px;
+  border: 0rem;
   color: #222;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
 }
